--- a/sections/collection-grid-template.liquid
+++ b/sections/collection-grid-template.liquid
@@ -1,7 +1,7 @@
 {%- include 'set_layout' -%}
 {% assign column_center = 'col-xs-12 col-sm-12 col-md-12' %}
 {%- include 'breadcrumb' -%}
-<section id="columns" class="columns-container">
+<section id="columns" class="columns-container collection--{{collection.handle}}">
   <div class="{{set-box}}">
     
     <div class="row">
