--- a/snippets/footer-1.liquid
+++ b/snippets/footer-1.liquid
@@ -49,7 +49,9 @@
                      {% endif %}
                   </div>
                   <div  class="powered powered_right col-sm-6 col-xs-12">
-                     <p>&copy; Copyright {{ "now" | date: "%Y" }} {{ shop.name }}. {{ powered_by_link }}</p>
+                     <p>&copy; Copyright {{ "now" | date: "%Y" }} {{ shop.name }}. 
+<!--                        {{ powered_by_link }} -->
+                     </p>
                   </div>
               </div>
           </div>
