--- a/templates/collection.ajaxsearch.liquid
+++ b/templates/collection.ajaxsearch.liquid
@@ -7,7 +7,7 @@
 {% paginate collection.products by 1000000 %}
 {% assign products = collection.products %}
 {% for p in products %}
-    {% assign featured_image = p.selected_or_first_available_variant.featured_image | default: p.featured_image %}
-    <div class="aps-ajax" data-handle="{{ p.handle }}" data-title="{{ p.title }}" data-price="{{ p.price | money }}"  data-img="{{ featured_image | img_url: 'small' }}"></div>  
+    {% assign featured_image = p.featured_image | default: p.selected_or_first_available_variant.featured_image %}
+    <div class="aps-ajax" data-handle="{{ p.handle }}" data-title="{{ p.title }}" data-price="{{ p.price | money }}" {%- if p.price_varies -%}data-mprice="{{ p.price_max | money }}"{%- endif -%}  data-img="{{ featured_image | img_url: 'small' }}"></div>  
 {% endfor %}
 {% endpaginate %}
