--- a/templates/password.liquid
+++ b/templates/password.liquid
@@ -28,7 +28,11 @@
         {% if form.posted_successfully? %}
         <p class="form-success">{{ 'general.password_page.signup_form_success' | t }}</p>
         {% else %}
-        <p class="pwSignupFormHeading h5">{{ 'general.password_page.signup_form_heading' | t }}</p>
+        <p class="pwSignupFormHeading h5">
+          Please bear with us as we work to give you a beautiful experience.<br />
+          Till then you can visit us on <a href="https://www.amazon.com/solinohome">www.amazon.com/solinohome</a><br />
+          Please email us at hello@solinohome.com for any help you need 😊<br />
+        </p>
         <input type="hidden" name="contact[tags]" value="prospect, password page">
         <div class="input-group">
           <input type="text" name="contact[email]" id="email" class="form-control" placeholder="{{ 'general.password_page.signup_form_email_placeholder' | t }}" autofocus>
